--- a/xgbfront/src/App.css
+++ b/xgbfront/src/App.css
@@ -1,3 +1,7 @@
+/* * {
+  border: 2px solid black;
+} */
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
@@ -5,38 +9,162 @@
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+a {
+  font-size: 1.2rem;
+  color: #1f1f1f;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+header img {
+  width: 130px;
+  height: 50px;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+header nav {
+  flex-grow: 1;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  margin-right: 150px;
+}
+
+header ul {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+
+  padding: 0;
+  width: 580px;
+  justify-content: space-between;
+}
+
+header button:hover {
+  background-color: var(--secondary-color);
+}
+
+header button.active-step {
+  background-color: var(--primary-color);
+  color: white;
+}
+
+header button.active-step:hover {
+  background-color: var(--secondary-color);
+  color: white;
+}
+
+header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 80px;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  z-index: 10;
+  border-bottom: 2px solid var(--primary-color);
+  background-color: var(--background-color);
+}
+
+header button {
+  width: 135px;
+}
+
+.theme-toggle-button {
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+  background-color: var(--button-bg-color);
+  color: var(--button-text-color);
+  border: 2px transparent;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.theme-toggle-button:hover {
+  background-color: var(--button-hover-border-color);
+  border: none;
+}
+
+@media (max-width: 870px) {
+  header {
+    flex-direction: column;
+    height: 130px;
   }
-  to {
-    transform: rotate(360deg);
+
+  header nav {
+    margin-right: 0;
+  }
+
+  header ul {
+    /* flex-direction: column; */
+    /* width: auto; */
+    margin: 0;
+  }
+
+  header button {
+    /* width: 100%; */
+    margin-bottom: 10px;
+  }
+
+  header img {
+    margin-top: 10px;
+    width: 100px;
+    height: 40px;
+  }
+
+  .theme-toggle-button {
+    width: 45px;
+    height: 45px;
+    display: block;
+    margin: 0 auto;
+    padding: 0;
   }
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
+@media (max-width: 600px) {
+  header {
+    /* height: auto; */
+    height: 110px;
+    margin: 0;
+    padding: 0;
   }
-}
 
-.card {
-  padding: 2em;
-}
+  header nav {
+    width: 100%;
+    padding: 0;
+    margin: 0;
+  }
 
-.read-the-docs {
-  color: #888;
+  header img {
+    visibility: hidden;
+    height: 0px;
+    width: 0px;
+    margin: 0;
+    padding: 0;
+  }
+
+  header ul {
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+    padding: 0;
+  }
+
+  header button {
+    margin: 5px 8px;
+    padding: 6px 10px;
+  }
+
+  .theme-toggle-button {
+    width: 35px;
+    height: 35px;
+  }
 }
