--- a/xgbfront/src/index.css
+++ b/xgbfront/src/index.css
@@ -1,11 +1,20 @@
+/* * {
+  border: 1px solid black
+} */
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  --background-color: #faf9f6;
+  --text-color: #1f1f1f;
+  --button-bg-color: #1a1a1a;
+  --button-text-color: #ffffff;
+  --button-hover-border-color: #ff5e0e;
+  --primary-color: #ff5e0e;
+  --secondary-color: #008575;
+  --card-bg-color: #ffffff;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -13,21 +22,27 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+[data-theme="dark"] {
+  --background-color: #2a2a2a;
+  --text-color: rgba(255, 255, 255, 0.87);
+  --button-bg-color: #f9f9f9;
+  --button-text-color: #1a1a1a;
+  --button-hover-border-color: #ff5e0e;
+  --card-bg-color: #1a1a1a;
 }
-a:hover {
-  color: #535bf2;
+
+a {
+  text-decoration: inherit;
 }
 
 body {
-  margin: 0;
-  display: flex;
+  margin-top: 50px;
+  padding: 20px;
   place-items: center;
   min-width: 320px;
-  min-height: 100vh;
+  /* min-height: 100vh; */
+  background-color: var(--background-color);
+  color: var(--text-color);
 }
 
 h1 {
@@ -36,25 +51,27 @@ h1 {
 }
 
 button {
+  padding: 10px 20px;
   border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+  border: none;
+  background-color: var(--button-bg-color);
+  color: var(--button-text-color);
   cursor: pointer;
-  transition: border-color 0.25s;
+  transition: background-color 0.2s ease;
+  font-size: 15px;
 }
+
 button:hover {
-  border-color: #646cff;
+  background-color: var(--button-hover-border-color);
+  color: white;
 }
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
+/* @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
     background-color: #ffffff;
@@ -65,4 +82,4 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-}
+} */
