--- a/xgbfront/src/App.css
+++ b/xgbfront/src/App.css
@@ -82,8 +82,9 @@ header button {
   border-radius: 50%;
   width: 50px;
   height: 50px;
-  display: flex;
-  align-items: center;
+  display: block;
+  margin: 0;
+  padding: 0;
   cursor: pointer;
   transition: background-color 0.3s ease;
 }
