--- a/xgbfront/src/components/training/TrainingStyles.css
+++ b/xgbfront/src/components/training/TrainingStyles.css
@@ -12,30 +12,30 @@
 }
 
 .method-button {
-    border: 1px solid #ccc;
-    background-color: var(--background-color);
-    color: var(--text-color);
-    margin: 0 10px;
-    width: 160px;
-    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+  border: 1px solid #ccc;
+  background-color: var(--background-color);
+  color: var(--text-color);
+  margin: 0 10px;
+  width: 160px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
 }
 
 .method-button:hover {
-    border: 1px solid var(--primary-color);
-    color: var(--primary-color);
-    background-color: var(--background-color);
+  border: 1px solid var(--primary-color);
+  color: var(--primary-color);
+  background-color: var(--background-color);
 }
 
 .method-button.selected {
-    background-color: var(--secondary-color);
-    color: white;
+  background-color: var(--secondary-color);
+  color: white;
 }
 
 .method-button.selected:hover {
-    border: 1px solid #ccc;
-    background-color: var(--primary-color);
-    color: white;
-  }
+  border: 1px solid #ccc;
+  background-color: var(--primary-color);
+  color: white;
+}
 
 .split-ratio,
 .num-folds {
@@ -69,14 +69,13 @@
 }
 
 @media (max-width: 870px) {
-    .training-container {
-      margin-top: 70px
-    }
-  
+  .training-container {
+    margin-top: 70px;
   }
-  
-  @media (max-width: 600px) {
-    .training-container {
-      margin-top: 50px
-    }
+}
+
+@media (max-width: 600px) {
+  .training-container {
+    margin-top: 50px;
   }
+}
