--- a/xgbfront/src/App.css
+++ b/xgbfront/src/App.css
@@ -94,13 +94,21 @@ header button {
   border: none;
 }
 
-@media (max-width: 870px) {
+input[type="number"], select {
+  border: 1px solid var(--button-bg-color);
+  border-radius: 4px;
+  background-color: var(--background-color);
+  color: var(--text-color);
+}
+
+@media (max-width: 880px) {
   header {
     flex-direction: column;
-    height: 130px;
+    height: 100px;
   }
 
   header nav {
+    flex-grow: 0;
     margin-right: 0;
   }
 
@@ -112,13 +120,14 @@ header button {
 
   header button {
     /* width: 100%; */
-    margin-bottom: 10px;
+    /* margin-bottom: 10px; */
   }
 
   header img {
-    margin-top: 10px;
-    width: 100px;
-    height: 40px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    width: 80px;
+    height: 30px;
   }
 
   .theme-toggle-button {
