--- a/xgbfront/src/components/fileSelection/FileSelectionStyles.css
+++ b/xgbfront/src/components/fileSelection/FileSelectionStyles.css
@@ -13,10 +13,15 @@
   min-width: 60%;
 }
 
+.table-container {
+  max-height: 400px; /* Adjust the height as needed */
+  overflow: auto;
+}
+
 table {
   border-collapse: collapse;
   width: 100%;
-  table-layout: fixed; /* columns have the same width */
+  /* table-layout: fixed; columns have the same width */
   font-size: 0.8em;
   background-color: var(--card-bg-color);
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
@@ -35,6 +40,17 @@ td {
 th {
   background-color: var(--secondary-color);
   color: white;
+}
+
+label {
+  margin-top: 10px;
+  display: block;
+}
+
+select {
+  margin-left: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
 }
 
 @media (max-width: 1100px) {
