--- a/xgbfront/src/components/training/TrainingStyles.css
+++ b/xgbfront/src/components/training/TrainingStyles.css
@@ -38,23 +38,51 @@
 }
 
 .split-ratio,
-.num-folds {
+.num-folds,
+.distribution-config {
   margin-bottom: 20px;
 }
 
 .split-ratio label,
-.num-folds label {
+.num-folds label,
+.distribution-config label {
   display: block;
   margin-bottom: 10px;
 }
 
 .split-ratio input,
-.num-folds input {
-  width: 60px;
+.num-folds input,
+.distribution-config input {
+  width: 50px;
   padding: 8px;
   margin-left: 10px;
   border: 1px solid #ccc;
   border-radius: 4px;
+  
+}
+
+.distribution-config select {
+  padding: 8px;
+  margin-left: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  
+}
+
+.distribution-config table {
+  /* margin-top: 10px; */
+  border-collapse: collapse;
+  width: 320px;
+}
+
+.distribution-config td {
+  padding: 8px;
+  border: 1px solid #ccc;
+}
+
+.distribution-config input {
+  width: 70%;
+  margin-left: 0;
 }
 
 .selected-params h3 {
@@ -68,7 +96,21 @@
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-@media (max-width: 870px) {
+.train-button {
+  padding: 10px 20px;
+  border: none;
+  border-radius: 4px;
+  background-color: var(--button-bg-color);
+  color: var(--button-text-color);
+  cursor: pointer;
+  margin-top: 20px;
+}
+
+.train-button:hover {
+  background-color: var(--button-hover-border-color);
+}
+
+@media (max-width: 880px) {
   .training-container {
     margin-top: 70px;
   }
@@ -77,5 +119,19 @@
 @media (max-width: 600px) {
   .training-container {
     margin-top: 50px;
+  }
+}
+
+@media (max-width: 400px) {
+  .method-button {
+    margin: 0 5px;
+    width: 140px;
+    font-size: small;
+  }
+
+  .selected-params h3 {
+    padding: 6px;
+    width: 250px;
+    font-size: medium;
   }
 }
