--- a/xgbfront/src/components/tunning/TunningStyles.css
+++ b/xgbfront/src/components/tunning/TunningStyles.css
@@ -63,10 +63,10 @@
 .tunning-container input[type="number"] {
   width: 80%;
   padding: 6px;
-  border: 1px solid var(--button-bg-color);
-  border-radius: 4px;
   background-color: var(--background-color);
   color: var(--text-color);
+  border: 1px solid #ccc;
+  border-radius: 4px;
 }
 
 @media (max-width: 880px) {
@@ -94,7 +94,6 @@
 }
 
 @media (max-width: 400px) {
-
   .tunning-container .card {
     width: 90%;
     /* margin: 0; */
@@ -104,7 +103,7 @@
     width: 100%;
     border-collapse: collapse;
     margin-bottom: 20px;
-  }  
+  }
 
   .tunning-container input[type="number"] {
     width: 60%;
@@ -115,5 +114,3 @@
     color: var(--text-color);
   }
 }
-
-
