--- a/xgbfront/src/components/results/ResultsStyles.css
+++ b/xgbfront/src/components/results/ResultsStyles.css
@@ -1,3 +1,59 @@
+.results-container {
+  padding: 20px;
+}
+
+.result-image {
+  border: 1px solid #ccc;
+  padding: 10px;
+  text-align: center;
+  background-color: #fafafa;
+  border-radius: 4px;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  background-color: var(--card-bg-color);
+}
+
+.result-image:hover {
+  transform: scale(1.02);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.results-images {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+  margin-top: 20px;
+}
+
+.result-image img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin: 0 auto;
+  border-radius: 4px;
+  cursor: zoom-in;
+}
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.8);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000;
+  cursor: zoom-out;
+}
+
+.modal-image {
+  max-width: 90%;
+  max-height: 90%;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+
 @media (max-width: 880px) {
   .results-container {
     margin-top: 70px;
@@ -7,5 +63,9 @@
 @media (max-width: 600px) {
   .results-container {
     margin-top: 50px;
+  }
+
+  .results-images {
+    grid-template-columns: 1fr;
   }
 }
