--- a/xgbfront/src/components/fileSelection/FileSelectionStyles.css
+++ b/xgbfront/src/components/fileSelection/FileSelectionStyles.css
@@ -62,6 +62,10 @@ label {
   margin-bottom: 15px;
 }
 
+.file-selection-controls select {
+  width: 220px;
+}
+
 .upload-button {
   display: flex;
   align-items: center;
