--- a/src/components/neuralNetwork/NNStyles.css
+++ b/src/components/neuralNetwork/NNStyles.css
@@ -43,8 +43,13 @@
   gap: 20px;
   width: 100%;
   max-width: 900px;
+  padding-top: 20px;
   margin: 0 auto;
   align-items: center;
+}
+
+.tunning-description {
+  padding-top: 10px;
 }
 
 .tunning-sections .nn-card {
@@ -81,6 +86,9 @@
   width: 100%;
   display: flex;
   justify-content: center;
+  max-height: 500px;
+  overflow-y: auto;
+  padding: 0 10px;
 }
 
 .nn-card td {
@@ -460,16 +468,23 @@
 
 .collapsible-header {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   cursor: pointer;
-  padding-bottom: 15px;
   border-bottom: 1px solid var(--border-color);
   width: 100%;
 }
 
 .collapsible-header h3 {
-  margin: 0;
+  margin-right: 10px;
+}
+
+.collapsible-header svg {
+  display: flex;
+  align-items: center;
+  position: relative;
+  top: -5px; /* Adjust the icon position upward a bit more */
+  font-size: 0.9em; /* Make the icon slightly smaller */
 }
 
 .architecture-content {
@@ -827,4 +842,19 @@
 
 .layer-visualization::-webkit-scrollbar-thumb:hover {
   background-color: rgba(0, 0, 0, 0.3);
+}
+
+/* Style the scrollbar */
+.table-container::-webkit-scrollbar {
+  width: 6px;
+}
+
+.table-container::-webkit-scrollbar-track {
+  background: var(--accent-color-light);
+  border-radius: 4px;
+}
+
+.table-container::-webkit-scrollbar-thumb {
+  background-color: var(--primary-color);
+  border-radius: 4px;
 }
