--- a/src/components/tunning/TunningStyles.css
+++ b/src/components/tunning/TunningStyles.css
@@ -51,8 +51,9 @@
 
 .tunning-container .tunning-sections {
   display: flex;
+  flex-direction: row;
   justify-content: center;
-  gap: 20px;
+  /* gap: 20px; */
   width: 100%;
 }
 
@@ -63,6 +64,7 @@
   background-color: var(--card-bg-color);
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   width: 45%;
+  height: 500px;
   min-width: 300px;
   display: flex;
   flex-direction: column;
@@ -148,7 +150,7 @@
 
   .tunning-container .card {
     width: 100%;
-    max-width: 500px;
+    max-width: 300px;
   }
 }
 
